# fastMetaNARS

./: CMakeLists.txt  HowToCompile.md
nal/: NAL.nal
source/d/codegen/: GenerateRules2.d
source/d/fastMetaNars/: ClassicalBelief.d  ClassicalConcept.d  ClassicalTask.d  ClassicalTaskLink.d  CompoundHashtable.d  CompoundHashtableUtilities.d  FlagsOfCopula.d  FlagsOfCopulaComplexity.d  FlagsOfCopulaConvertToString.d  FrequencyCertainty.d  IBag.d  Interval.d  PretestDeriver.d  ReasonerInstance.d  RuleTable.d  TemporalMatcher.d  TemporalMatcherCheckerImpl.d  Term.d  TermComparision.d  TermOrCompoundTermOrVariableReferer.d  TermReferer.d  TruthValue.d
source/d/fastMetaNars/codegen/: GenerateRules.d
source/d/fastMetaNars/config/: Parameters.d
source/d/fastMetaNars/control/: DerivationContext.d  WorkingCyclish.d
source/d/fastMetaNars/deriver/: DeriverCaller.d  DeriverUtils.d
source/d/fastMetaNars/entity/: BudgetValue.d  ClassicalBelief.d  ClassicalConcept.d  ClassicalSentence.d  ClassicalTask.d  ClassicalTaskLink.d  ClassicalTermLink.d  Item.d
source/d/fastMetaNars/entity/builder/: BagBuilder.d
source/d/fastMetaNars/inference/: BudgetFunctions.d  ConceptTermInserter.d  InferenceDriver.d
source/d/fastMetaNars/inference/walker/: TermWalker.d
source/d/fastMetaNars/lang/: Lexer.d  Line.d  Parser.d  ParserException.d  Token.d
source/d/fastMetaNars/memory/: ArrayBag.d  ArrayStack.d  Bag.d  Distributor.d  Hashtable.d  IBag.d  LevelBag.d  Memory.d
source/mixed/: Bag.h  BinaryIndexTree.h  Bloomfilter.h  ClassicalBelief.h  ClassicalConcept.h  ClassicalTask.h  DualStamp.h  FrequencyCertainty.cpp  FrequencyCertainty.h  Hash.cpp  Hash.h  Inference.cpp  Inference.h  InferenceFuture.h  Mdma.h  Murmur.cpp  Murmur.h  NumericHelper.cpp  NumericHelper.h  Path.h  PathDescriptor.h  PathWalker.cpp  PathWalker.h  ReasonerInstance.cpp  ReasonerInstance.h  Ruletable.h  SplitMeIntoFiles.cpp  StaticBitset.h  TemplateHelper.h  TermConcept.h  TermId.h  TypedefsAndDefines.h  UnifiedTerm.cpp  UnifiedTerm.h  UnifiedTermIndex.h
source/mixed/autogen/: Deriver.cpp  Deriver.h
source/mixed/tests/: TestBag.cpp  TestBinaryIndexTree.cpp
unittest/fastMetaNars/: UnittestTemporalMatcher.d
